@@ -1,0 +1,11 @@
+<f:be.container includeCssFiles="{0:'{f:uri.resource(path:\'StyleSheets/FontMaker.css\')}'}">
+	<div id="typo3-docheader">           
+		<div class="typo3-docheader-functions">&nbsp;</div>
+		<div class="typo3-docheader-buttons">&nbsp;</div>
+	</div>
+	<div id="typo3-docbody">
+		<div id="typo3-inner-docbody">
+			<div id="typo3-mod-freecap-font-maker"><f:render section="Content" /></div>
+		</div>
+	</div>
+</f:be.container>
